lib/libc/net/getaddrinfo.c
@@ -11282,6 +11282,10 @@ decl_stmt|;
 name|res_state
 name|res
 decl_stmt|;
+name|ai
+operator|=
+name|NULL
+expr_stmt|;
 name|hostname
 operator|=
 name|va_arg
@@ -11744,6 +11748,8 @@ expr_stmt|;
 if|if
 condition|(
 name|ai
+operator|!=
+name|NULL
 condition|)
 block|{
 name|cur
@@ -11770,8 +11776,9 @@ block|}
 block|}
 if|if
 condition|(
-operator|!
 name|ai
+operator|==
+name|NULL
 operator|||
 name|pai
 operator|->
@@ -11820,6 +11827,8 @@ expr_stmt|;
 if|if
 condition|(
 name|ai
+operator|!=
+name|NULL
 condition|)
 name|cur
 operator|->
